# SV-PGS

./: .gitignore  AOU_OPS_SPEC.md  BITPACKED_SPEC.md  DEAD_CODE_AUDIT.md  README.md  RELEASE_NOTES.md  SPEC.md  bed_reader.py  cyvcf2.py  pyproject.toml  run.sh  run.txt  run2.txt  sv_pgs_report.txt
.github/workflows/: cpu-tests.yml
scripts/: analyze_model.py
sv_pgs/: __init__.py  __main__.py  _jax.py  _startup_sweep.py  _typing.py  all_of_us.py  anderson.py  aou_runner.py  aou_storage.py  artifact.py  benchmark.py  bitpacked_loader.py  bitpacked_matrix.py  bitpacked_profile.py  block_matvec.py  blocks.py  cli.py  config.py  data.py  diagnostics.py  elbo.py  evaluate.py  forcing_sequence.py  gcsfuse_staging.py  gds.py  genotype.py  gpu_scheduler.py  graph.py  hybrid_matrix.py  inference.py  io.py  jax_backend.py  ld_block_partition.py  ld_blocks.py  linear_solvers.py  mixture_inference.py  mmap_reader.py  model.py  null_model.py  numeric.py  (+18 more)
sv_pgs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sv_pgs/_data/: EUR_hg38.tsv
sv_pgs/bitpacked/: __init__.py  bench.py  cpu_reference.py  gemm_gram.py  gemv_nt.py  gemv_tn.py  launch.py  lut.py  screening.py  smoke.py
swarm_findings/verdicts/: adversarial_tests.md  phase1_ld_blocks.md  phase2_block_matvec.md
tests/: conftest.py  test_adversarial_high_dimensional.py  test_adversarial_limits.py  test_all_of_us.py  test_anderson.py  test_anderson_actually_accelerates.py  test_anderson_depth_one_boundaries_pinning.py  test_anderson_in_em.py  test_aou_dummy_trap_fix.py  test_aou_storage.py  test_artifact_corruption_pinning.py  test_artifact_empty_roundtrip_boundaries_pinning.py  test_artifact_metadata_bugfixes.py  test_atomic_artifact_save_pinning.py  test_atomic_gcs_download_pinning.py  test_autotune_memavailable.py  test_autotune_oom_safety.py  test_benchmark.py  test_benchmark_constant_target_boundaries_pinning.py  test_benchmark_single_class_pinning.py  test_binary_tr_newton_path.py  test_bitpacked_cpu_reference.py  test_bitpacked_edge_cases.py  test_bitpacked_engagement.py  test_bitpacked_gemm_gram.py  test_bitpacked_gemv_nt.py  test_bitpacked_gemv_tn.py  test_bitpacked_launch.py  test_bitpacked_loader_cache.py  test_bitpacked_loader_parallel.py  test_bitpacked_lut.py  test_bitpacked_matrix.py  test_bitpacked_package_smoke.py  test_bitpacked_profile.py  test_bitpacked_screening.py  test_block_matvec_equivalence.py  test_block_shuffle.py  test_blocks.py  test_cache_corruption_safety.py  test_cg_workset_resident_cache_pinning.py  (+94 more)
