[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-pgs"
version = "0.1.0"
description = "Joint empirical-Bayes GLM for polygenic scoring with structural variants"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20,<0.5",
    "jaxlib>=0.4.20,<0.5",
    "numpy>=1.24,<2",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["sv_pgs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
