[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-pgs"
version = "0.1.0"
description = "Multi-GPU joint empirical-Bayes GLM for polygenic scoring with structural variants"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20,<0.5",
    "jaxlib>=0.4.20,<0.5",
    "numpy>=1.24,<2",
    "scipy>=1.15,<2",
    "scikit-learn>=1.3",
    "cyvcf2>=0.31.4",
    "google-cloud-bigquery>=3.40.1",
    "pandas>=1.5",
    "matplotlib>=3.7",
    # psutil powers the host-RAM gate that decides whether the bitpacked
    # cold-load can fit before allocating; without it the gate silently
    # fails open and a tight host RAM run risks OOM during cold-load.
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
gpu = ["jax[cuda12]>=0.4.20,<0.5", "cupy-cuda12x>=13.0", "nvidia-cuda-nvrtc-cu12"]

[project.scripts]
sv-pgs = "sv_pgs.cli:main"

[tool.setuptools.packages.find]
include = ["sv_pgs*"]

[tool.setuptools.package-data]
sv_pgs = ["_data/*.tsv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take 30s+; can be deselected via -m 'not slow'",
]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "pytest",
    "pytest.*",
    "jax",
    "jax.*",
    "jaxlib",
    "jaxlib.*",
    "sklearn",
    "sklearn.*",
    "google.cloud",
    "google.cloud.*",
    "cupy",
    "cupy.*",
    "cupyx",
    "cupyx.*",
    "scipy",
    "scipy.*",
    "cyvcf2",
    "pandas",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "vulture>=2.16",
    "pytest>=8",
]
